[gd_scene load_steps=5 format=3 uid="uid://hkyyvcpkbqc2"]

[ext_resource type="Texture2D" uid="uid://b07p4ojqwvj04" path="res://Images/i.png" id="1_h2xf0"]
[ext_resource type="Script" path="res://Transfer_player.gd" id="1_uk7ww"]
[ext_resource type="Texture2D" uid="uid://dmlslastibars" path="res://Images/BlackCross.png" id="1_vmmq7"]
[ext_resource type="Texture2D" uid="uid://dt1g05d6kqmnm" path="res://Images/Restore.png" id="3_5abkv"]

[node name="Player" type="Control"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -30.0
offset_bottom = -804.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uk7ww")

[node name="NotBlank" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Info" type="TextureButton" parent="NotBlank"]
layout_mode = 0
offset_left = 7.0
offset_top = 9.0
offset_right = 445.0
offset_bottom = 465.0
scale = Vector2(0.05, 0.05)
texture_normal = ExtResource("1_h2xf0")

[node name="Name" type="Label" parent="NotBlank"]
layout_mode = 0
offset_left = 38.0
offset_right = 230.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="Price" type="Label" parent="NotBlank"]
layout_mode = 0
offset_left = 230.0
offset_right = 288.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Price"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Remove" type="TextureButton" parent="NotBlank"]
layout_mode = 0
offset_left = 330.0
offset_top = 10.0
offset_right = 430.0
offset_bottom = 110.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("1_vmmq7")

[node name="Blank" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Select" type="Button" parent="Blank"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 310.0
offset_bottom = 40.0

[node name="Name" type="Label" parent="Blank"]
layout_mode = 0
offset_left = 38.0
offset_right = 230.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.65098, 0.65098, 0.65098, 1)
theme_override_font_sizes/font_size = 20
text = "Choose player"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="Restore" type="TextureButton" parent="Blank"]
layout_mode = 0
offset_left = 330.0
offset_top = 10.0
offset_right = 430.0
offset_bottom = 110.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("3_5abkv")

[connection signal="pressed" from="NotBlank/Remove" to="." method="_on_remove_pressed"]
[connection signal="pressed" from="Blank/Restore" to="." method="_on_restore_pressed"]
